<resources>
    <string name="app_name">FunDevelopment</string>
    <string name="this_is_my_first_textview">This is my first TextView :)</string>
    <string name="i_am_a_button">Button</string>
    <string name="add_your_email_address">Add your email address.</string>
    <string name="i_accept_to_learn_android">I accept to learn Android :)</string>
    <string name="notifications">Notifications</string>
    <string name="this_is_a_search_view">This is a SearchView</string>
    <string name="hello_from_java">Hello from Java code :)</string>
    <string name="error_email_missing">Please add an email address.</string>
    <string name="error_email_incorrect">You didn\'t enter an email address.</string>
    <string name="how_are_you_today">How are you today? Im feeling very excited today !!</string>
    <string name="hello_textview1">Hello TextView1 :)</string>
    <string name="hello_textview2">Hello TextView2 :)</string>
    <string name="hello_textview3">Hello textView3 :)</string>
    <string name="hello_textview4">Hello TextView4 :)</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="i_accept_terms_and_conditions">I accept terms and conditions</string>
    <string name="submit">Submit</string>
</resources>
