<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/space_16"
    tools:context=".week_3.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/colorAccent" />

    <EditText
        android:id="@+id/edit_text_email_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/edit_text_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Phone"
        android:inputType="phone" />

    <CheckBox
        android:id="@+id/checkbox_terms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/i_accept_terms_and_conditions" />

    <Button
        android:onClick="submitDataOnClick"
        android:textColor="@android:color/white"
        android:layout_marginTop="@dimen/general_margin"
        android:background="@color/colorPrimary"
        android:id="@+id/login_button"
        android:text="@string/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="@dimen/general_margin"
        android:id="@+id/text_view_result"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>